--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.5.0",
     "bootswatch": "^4.5.1",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.5.0",
     "ngx-gallery-9": "^1.0.6",
     "rxjs": "~6.5.5",
