--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -29,6 +29,7 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.5.0",
     "ngx-gallery-9": "^1.0.6",
+    "ngx-timeago": "^1.0.4",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
